feat: add wecom callback verification and async auto-reply

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,12 @@ BACKEND_PUBLIC_URL=
 LOG_LEVEL=INFO
 LOG_RAW_MODEL_OUTPUT=true
 LOG_MAX_CHARS=6000
+WECOM_CORP_ID=
+WECOM_AGENT_ID=0
+WECOM_SECRET=
+WECOM_TOKEN=
+WECOM_ENCODING_AES_KEY=
+WECOM_CALLBACK_PATH=/wecom/callback
 CORS_ALLOW_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
 CORS_ALLOW_ORIGIN_REGEX=https://.*\\.vercel\\.app
 
