feat: add wecom persona routing and friends fixed RAG pipeline

--- a/.env.example
+++ b/.env.example
@@ -39,8 +39,14 @@ SEGMENT_INDEX_META_PATH=runtime/rag_segment_index_meta.json
 
 TARGET_SENDER=Doppelgänger
 USER_SENDER_CANDIDATES=dxa🥰,dxa??,dxa
+DXA_PERSONA_KEY=dxa
+FRIENDS_PERSONA_KEY=friends
+FRIENDS_CHAT_DATA_PATHS=data/lxq_chat_data.json,data/Yucheng_Wang_chat_data.json,data/电源_chat_data.json.json
+FRIENDS_USER_SENDER_CANDIDATES=lxq,Yucheng Wang,电源
 STRICT_NICKNAME=宝贝
 FORBIDDEN_NICKNAMES=亲亲,宝宝,老婆,老公,宝子,乖乖
+FRIENDS_STRICT_NICKNAME=
+FRIENDS_FORBIDDEN_NICKNAMES=宝贝,宝宝,老婆,老公,亲亲,宝子,乖乖
 
 RETRIEVAL_TOP_K=30
 SEMANTIC_ENABLED=true
