feat: add robust temporal awareness and gap-coherence scoring

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,12 @@ STRICT_NICKNAME=宝贝
 FORBIDDEN_NICKNAMES=亲亲,宝宝,老婆,老公,宝子,乖乖
 FRIENDS_STRICT_NICKNAME=
 FRIENDS_FORBIDDEN_NICKNAMES=宝贝,宝宝,老婆,老公,亲亲,宝子,乖乖
+APP_TIMEZONE=Asia/Shanghai
+TEMPORAL_ACK_COOLDOWN_SECONDS=86400
+TEMPORAL_GAP_RECENT_SECONDS=600
+TEMPORAL_GAP_SAME_DAY_SECONDS=21600
+TEMPORAL_GAP_TWO_DAYS_SECONDS=172800
+TEMPORAL_GAP_WEEK_SECONDS=604800
 
 RETRIEVAL_TOP_K=30
 SEMANTIC_ENABLED=true
