fix: disable startup json ingestion by default and rely on runtime assets

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,7 @@ GEMINI_EMBEDDING_TEXT_SOURCE=segment_text
 GEMINI_FALLBACK_MODELS=gemini-3-pro-preview
 
 CHAT_DATA_PATH=data/chat_data.json
+BOOTSTRAP_ALLOW_JSON_INGEST=false
 SQLITE_PATH=runtime/doppelganger.db
 STYLE_PROFILE_PATH=runtime/style_profile.json
 PREFERENCE_PROFILE_PATH=runtime/preference_profile.json
