feat: merge rapid wecom user bursts and stop replies when complete

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,10 @@ WECOM_SECRET=
 WECOM_TOKEN=
 WECOM_ENCODING_AES_KEY=
 WECOM_CALLBACK_PATH=/wecom/callback
+WECOM_MERGE_BURST_GAP_SECONDS=6.0
+WECOM_MERGE_IDLE_SECONDS=1.2
+WECOM_MERGE_INCOMPLETE_EXTRA_SECONDS=1.0
+WECOM_MERGE_MAX_WAIT_SECONDS=10.0
 CORS_ALLOW_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
 CORS_ALLOW_ORIGIN_REGEX=https://.*\\.vercel\\.app
 
