--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ WECOM_ENCODING_AES_KEY=
 WECOM_CALLBACK_PATH=/wecom/callback
 WECOM_MERGE_BURST_GAP_SECONDS=6.0
 WECOM_MERGE_IDLE_SECONDS=1.2
+WECOM_MERGE_MIN_WAIT_SECONDS=5.0
 WECOM_MERGE_INCOMPLETE_EXTRA_SECONDS=1.0
 WECOM_MERGE_MAX_WAIT_SECONDS=10.0
 CORS_ALLOW_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
